# pesto

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  CMakeLists.txt  LICENSE.txt  conftest.py  pyproject.toml  pytest.ini
pesto/board/: board.py  board_state.py  enums.py  fen.py  perft.py  piece.py  square.py  utils.py
pesto/board/move/: apply.py  attack.py  castle.py  legal.py
pesto/board/move/tests/: test_apply.py  test_apply_cases.py  test_attack.py  test_attack_cases.py  test_castle.py  test_castle_cases.py  test_legal.py  test_legal_cases.py
pesto/board/move_gen/: attack.py  legal.py  moves.py
pesto/board/move_gen/tests/: test_attack.py  test_attack_cases.py  test_legal.py  test_legal_cases.py  test_moves.py  test_moves_cases.py
pesto/board/tests/: test_board.py  test_board_cases.py  test_board_state.py  test_board_state_cases.py  test_enums.py  test_fen.py  test_perft.py  test_perft_debug.py  test_piece.py  test_piece_cases.py  test_square.py
pesto/core/: enums.py
src/: CMakeLists.txt  board.cpp  board.h  collections.cpp  collections.h  exceptions.h  fen.cpp  fen.h  legal.cpp  legal.h  move.cpp  move.h  piece.cpp  piece.h  square.h  types.h
test/: CMakeLists.txt  board_test.cpp  fen_test.cpp  legal_test.cpp  move_test.cpp  piece_test.cpp
