[tool.poetry]
name = "pesto"
version = "0.1.0"
description = ""
authors = ["jcusick13 <jonathan.cusick09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.0"
black = "^23.3.0"
pytest-cases = "^3.6.14"
pre-commit = "^3.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
